[build-system]
requires = ["hatchling==1.30.1", "packaging==26.2"]
build-backend = "hatchling.build"

[project]
name = "vsmlrt-cuda"
dynamic = ["version"]
description = "CUDA and TensorRT runtime libraries for vsmlrt packages"
requires-python = ">=3.12"
license = "Proprietary"
license-files = ["LICENSE"]
authors = [{ name = "Vardë", email = "ichunjo.le.terrible@gmail.com" }]
maintainers = [{ name = "Vardë", email = "ichunjo.le.terrible.github.com" }]
dependencies = []

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-wheels"
"Repository" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-wheels"

[tool.hatch.version]
source = "regex"
path = "_version.py"

[tool.hatch.build.targets.wheel]
include = ["vapoursynth"]
artifacts = ["vapoursynth/plugins/vsmlrt-cuda/*"]
